--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -199,28 +199,36 @@
  <div id="ajax-exception">
 <dl class="dl-horizontal">
 <dt>RESP payments</dt><dd>
+ <div id="ajax-ex1">
 <p id="h-2-1">You must issue a T4A slip if <strong>one </strong>of the following apply:</p>
 <ul>
 <li>Total <strong>accumulated income</strong> paid to a subscriber  is <strong>more than $50 </strong>in the calendar year </li>
 <li>Total <strong>educational assistance</strong> paid to a beneficiary  is <strong>more than $50 </strong>in the calendar year  </li>
 </ul>
+</div>
 </dd>
 <dt>Tax-free savings account (TFSA)</dt><dd>
+ <div id="ajax-ex2">
 <p>You must issue a T4A slip if the total <strong>TFSA taxable amount </strong>paid to a recipient  is <strong>more than $50 </strong>in the calendar year</p>
+</div>
 </dd>
 <dt>Group term life insurance benefits</dt><dd>
+ <div id="ajax-ex3">
 <p>You must issue a T4A slip if you provide <strong>group term life insurance </strong>benefits if <strong>one </strong>of the following apply:</p>
 <ul>
 <li>Taxable amount is paid to a <strong>former employee, </strong>you <strong>always </strong>have to issue a T4A slip  </li>
 <li>Taxable amount paid to a <strong>retired </strong>employee is the <strong>only </strong>income reported on the slip and the total is <strong>more than $50 </strong>in the calendar year   </li>
 </ul>
+</div>
 </dd>
 <dt>Administrator or trustee of a multi-employer plan (MEP)</dt><dd>
+<div id="ajax-ex4">
 <p>You must issue a T4A slip if you are the <strong>administrator or trustee of a MEP </strong>and <strong>all </strong>of the following apply:</p>
 <ul>
 <li>You provide taxable benefits under a plan to employees (or former employees) </li>
 <li>The taxable amount paid to the employee is <strong>more than $25 </strong>in the calendar year </li>
 </ul>
+</div>
 </dd>
 </dl>
 </div>
@@ -503,11 +511,12 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  </details> 
 
  <details> <summary>Code 028 –&nbsp;Other income <span class="label label-warning">Jeremiah</span>  </summary> 
-  <p id="cd028">Generally, amounts are reported in specific boxes or codes on slips. However, report any other amount that you did not have to report in other boxes or codes of the T4A slip, or on other information slip if:</p>
+  <p id="cd028">Generally, amounts are reported in specific boxes or codes on slips. However, report any other amount that you did not have to report in other boxes or codes of the T4A slip if either:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
  <li class="cnjnctn-col">The amount is more than&nbsp;$500</li>
  <li class="cnjnctn-col">You deducted income tax</li> 
 </ul>
+<p><strong>Do not</strong> report payments of fees for services using code 028, continue to <a href="bx048">box 048</a>.</p>
 <h4>Situations where you may need to report amounts using code 028</h4>
 <ul>
 <li>You paid a premium or you made a contribution to a non-group plan (such as: sickness, accident, disability or income maintenance insurance plan), learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#disability">Insurance plans</a></li>
@@ -603,7 +612,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  </details> 
 
 <details ><summary>Code 118 – Medical premium benefits <span class="label label-warning">Jeremiah</span> </summary> 
-<p id="cd118">Report the premiums that you paid or contributed to a provincial or territorial health services insurance plan on behalf of a <strong>former or retired</strong> employee.</p>
+<p id="cd118">Report the premiums that you paid as contribution to a provincial or territorial health services insurance plan on behalf of a <strong>former or retired</strong> employee.</p>
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#provincial">Insurance plans</a></p>	 
 </details> 
 
@@ -611,7 +620,15 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 <p id="cd119">Report the premiums that you paid to a group term life insurance plan on behalf of a <strong>former or retired</strong> employee.</p>
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#life">Insurance plans</a></p>
 
-<p>The&nbsp;$500 reporting threshold for T4A slips <strong>does not</strong> apply because this payment is included on the <a href="#exception" aria-controls="centred-popup" class="wb-lbx" role="button">exceptions list&nbsp;<span class="far fa-question-circle"></span></a>.</p> 
+ <h4>Exceptions </h4>
+<dl class="dl-horizontal">
+<dt>Group term life insurance benefits</dt>
+<dd><div data-ajax-replace="#ajax-ex3"></div></dd>
+<dt>Administrator or trustee of a multi-employer plan (MEP)</dt>
+<dd><div data-ajax-replace="#ajax-ex4"></div></dd>
+</dl>
+
+
  </details> 
  
 <details>  <summary>Code 122 – RESP accumulated income payments paid to other</summary> 
