--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -510,13 +510,13 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
   <p id="cd014">If you wish, you can enter a retiree number, an employee number, or a payroll number. In the "Other information" area, enter code&nbsp;<strong>014</strong> and the recipient's number. If you prefer, you can enter the recipient's number in the "Recipient's name" area of the T4A&nbsp;slip. The recipient address area cannot be used for this purpose.</p> 
  </details> 
 
- <details> <summary>Code 028 –&nbsp;Other income <span class="label label-warning">Jeremiah</span>  </summary> 
+ <details> <summary>Code 028 –&nbsp;Other income <span class="label label-success">Rewrite done</span>  </summary> 
   <p id="cd028">Generally, amounts are reported in specific boxes or codes on slips. However, report any other amount that you did not have to report in other boxes or codes of the T4A slip if either:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
  <li class="cnjnctn-col">The amount is more than&nbsp;$500</li>
  <li class="cnjnctn-col">You deducted income tax</li> 
 </ul>
-<p><strong>Do not</strong> report payments of fees for services using code 028, continue to <a href="bx048">box 048</a>.</p>
+<p><strong>Do not</strong> report payments of fees for services using code 028, continue to <a href="#bx048">box 048</a>.</p>
 <h4>Situations where you may need to report amounts using code 028</h4>
 <ul>
 <li>You paid a premium or you made a contribution to a non-group plan (such as: sickness, accident, disability or income maintenance insurance plan), learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#disability">Insurance plans</a></li>
@@ -611,16 +611,16 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
   <p id="cd117">Report the benefits of a loan that a person or partnership received as a shareholder or related to a shareholder.</p> 
  </details> 
 
-<details ><summary>Code 118 – Medical premium benefits <span class="label label-warning">Jeremiah</span> </summary> 
+<details ><summary>Code 118 – Medical premium benefits <span class="label label-success">Rewrite done</span> </summary> 
 <p id="cd118">Report the premiums that you paid as contribution to a provincial or territorial health services insurance plan on behalf of a <strong>former or retired</strong> employee.</p>
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#provincial">Insurance plans</a></p>	 
 </details> 
 
-<details> <summary>Code 119 – Premiums paid to a group term life insurance plan <span class="label label-warning">Jeremiah</span> </summary> 
+<details> <summary>Code 119 – Premiums paid to a group term life insurance plan <span class="label label-success">Rewrite done</span> </summary> 
 <p id="cd119">Report the premiums that you paid to a group term life insurance plan on behalf of a <strong>former or retired</strong> employee.</p>
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#life">Insurance plans</a></p>
 
- <h4>Exceptions </h4>
+ <h4>When to issue</h4>
 <dl class="dl-horizontal">
 <dt>Group term life insurance benefits</dt>
 <dd><div data-ajax-replace="#ajax-ex3"></div></dd>
@@ -693,7 +693,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/benefits-allowances/financial/tax-free-savings-account-tfsa.html">Tax-free savings account (TFSA)</a>.</p> 
  </details> 
 
- <details>  <summary>Code 135 – Recipient-paid premiums for private health services plans <span class="label label-warning">Jeremiah</span> </summary> 
+ <details>  <summary>Code 135 – Recipient-paid premiums for private health services plans <span class="label label-success">Rewrite done</span> </summary> 
  <p  id="cd135">Report the premiums that you paid to a private health services plans on behalf of a <strong>former or retired</strong> employee.</p>
 <p>The use of code 135 is optional. If you do not use this code, the CRA may ask the former or retired employee to provide supporting documents.</p>
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#phsp">Insurance plans</a></p>	
