--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Calculate second CPP (CPP2) contributions deductions - Calculate payroll deductions and contributions - Canada.ca</title>
+         <title>Calculate second additional CPP (CPP2) contributions deductions - Calculate payroll deductions and contributions - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -111,15 +111,15 @@
                   </li>
                </ul>
             </nav>
-            <h1 property="name" id="wb-cont" class="gc-thickline">Calculate second CPP (CPP2) contributions deductions</h1>
+            <h1 property="name" id="wb-cont" class="gc-thickline">Calculate second additional CPP (CPP2) contributions deductions</h1>
 <div class="alert alert-warning">
-<p>Beginning <strong>January 1, 2024</strong>, once the <a href="/cra-arc/payroll/calculate/how/cpp.html">first maximum pensionable earnings ceiling</a> is reached, you must begin to calculate the second CPP (CPP2) deductions using the following methods.</p>
+<p>Beginning <strong>January 1, 2024</strong>, once the <a href="/cra-arc/payroll/calculate/how/cpp.html">first maximum pensionable earnings ceiling</a> is reached, you must begin to calculate the second additional CPP (CPP2) deductions using the following methods.</p>
 </div>
 		 <div class="col-xs-12">
                <div class="row">
                   <p class="pull-left small"><strong>You may be looking for:</strong></p>
                   <ul class="pull-left mrgn-lft-md list-unstyled small">
-                     <li><a href="/cra-arc/payroll/calculate/when/cpp2rates.html">Second CPP (CPP2) contribution rates and maximums</a></li>
+                     <li><a href="/cra-arc/payroll/calculate/when/cpp2rates.html">Second additional CPP (CPP2) contribution rates and maximums</a></li>
                   </ul>
                   <div class="clearfix">&nbsp;</div>
                </div>
