--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -8,7 +8,7 @@
 <head>
 <meta charset="utf-8">
 <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-<title>Second CPP (CPP2) contribution rates and maximums -  Calculate payroll deductions and contributions - Canada.ca</title>
+<title>Second additional CPP (CPP2) contribution rates and maximums -  Calculate payroll deductions and contributions - Canada.ca</title>
 <meta content="width=device-width,initial-scale=1" name="viewport">
 <meta name="robots" content="noindex, follow">
 <!-- Meta data -->
@@ -92,9 +92,9 @@
       <li> <a href="../corrections/index.html" class="hidden-xs hidden-sm">Make corrections before filing</a> <a href="../corrections/index.html#gc-document-nav" class="visible-xs visible-sm">Make corrections before filing</a> </li>
     </ul>
   </nav>
-  <h1 property="name" id="wb-cont" class="gc-thickline">Second CPP (CPP2) contribution rates and maximums</h1>
+  <h1 property="name" id="wb-cont" class="gc-thickline">Second additional CPP (CPP2) contribution rates and maximums</h1>
 <div class="alert alert-warning">
-<p>Beginning <strong>January 1, 2024</strong>, once the <a href="/cra-arc/payroll/calculate/when/cpprates.html">first maximum pensionable earnings ceiling</a> is reached, you must deduct second CPP (CPP2) contributions using the following rates and maximums.</p>
+<p>Beginning <strong>January 1, 2024</strong>, once the <a href="/cra-arc/payroll/calculate/when/cpprates.html">first maximum pensionable earnings ceiling</a> is reached, you must deduct second additional CPP (CPP2) contributions using the following rates and maximums.</p>
 </div>	
   <p>For each year <strong>on or after January 1, 2024</strong>, the CRA provides the:</p>
   <ul class="fa-ul">
