--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -688,16 +688,22 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 <p>Report the variable payment life annuity amount paid from a <abbr title="pool registered pension plan">PRPP</abbr> and money purchase RPP.</p>
  </details> 
  
-<details>  <summary>Code 134 – Tax-free savings account (TFSA) taxable amount</summary> 
-  <p  id="cd134">Report the taxable portion of amounts paid during the exempt period to a beneficiary who is a resident of Canada.</p>
+<details>  <summary>Code 134 – Tax-free savings account (TFSA) taxable amount <span class="label label-warning">Jeremiah</span></summary> 
+  <p  id="cd134">Report the taxable amount paid during the exempt period to a beneficiary who is a resident of Canada.</p>
+ <h4>When to issue</h4>
+<dl class="dl-horizontal">
+<dt>Tax-free savings account (TFSA)</dt>
+<dd><div data-ajax-replace="#ajax-ex2"></div></dd>
+</dl>
+
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/benefits-allowances/financial/tax-free-savings-account-tfsa.html">Tax-free savings account (TFSA)</a>.</p> 
  </details> 
 
  <details>  <summary>Code 135 – Recipient-paid premiums for private health services plans <span class="label label-success">Rewrite done</span> </summary> 
  <p  id="cd135">Report the premiums that you paid to a private health services plans on behalf of a <strong>former or retired</strong> employee.</p>
 <p>The use of code 135 is optional. If you do not use this code, the CRA may ask the former or retired employee to provide supporting documents.</p>
-<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#phsp">Insurance plans</a></p>	
 <p>This is considered a qualifying medical expense and the recipient can claim the deduction on their income tax and benefit return. </p>
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#phsp">Insurance plans</a></p>	
  </details> 
 
  <details><summary>Code 136 – Parents of Murdered or Missing Children/Parents of Young Victims of Crimes</summary> 
