--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -1081,7 +1081,7 @@
 
 	
  </ul>
-    details class="mrgn-tp-md">
+     <details class="mrgn-tp-md">
                                  <summary>Calculation example</summary>
 <p>Continue with the example</p>
  <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
