--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -1131,9 +1131,9 @@
 </details>          
        
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
- <li class="cnjnctn-col"> If the amount is <strong>zero or negative</strong>, $4,700 is the CPP2 pensionable earnings for the period of employment (step 3). </li>
-<li class="cnjnctn-col">
-  If the amount is <strong>positive</strong>, this amount is the CPP2 pensionable earnings for the period of employment (step 3)  </li>
+<li class="cnjnctn-col">  <span class="fas fa-plus text-muted fa-lg"> </span>   If the amount is <strong>positive</strong>, this amount is the CPP2 pensionable earnings for the period of employment (step 3)  </li>
+ <li class="cnjnctn-col">   <span class="fas fa-minus text-muted fa-lg"> </span> If the amount is <strong>negative or zero</strong>, $4,700 is the CPP2 pensionable earnings for the period of employment (step 3). </li>
+
 </ul>
 
                                   
