--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-3.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-3.html
@@ -160,10 +160,19 @@
   </li>
   <li>Non-arm&rsquo;s length transactions
   <details>             
-<summary id="nonarm">Transferring non-arm&rsquo;s length expenditures</summary>
-<p> Non-arm&rsquo;s length contract costs <strong>do not qualify</strong> as  SR&amp;ED expenditures for ITC purposes.</p>
-	  <p>However, the performer may transfer all or part of their qualified SR&amp;ED expenditures to the claimant for ITC purposes.</p>
-	  <p>To transfer their expenditures, performers must use:</p>
+<summary id="nonarm">Review non-arm&rsquo;s length expenditures</summary>
+	  <strong>Non-arm’s length amounts that may reduce your expenditures</strong>
+	  <ul>
+		  <li>adjustments to your purchases (limited to costs) of goods and services from non-arm's length suppliers</li>
+		  <li>qualified expenditures you transferred</li>
+		  <li>assistance allocated to you</li>
+		  	<ul>
+				<li>in this case, complete <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t1145.html">Form T1145, Agreement to Allocate Assistance for SR&ED Between Persons Not Dealing at Arm’s Length</a></li>
+		  </ul>
+	  </ul>
+	  <strong>Expenditures for your non-arm’s length SR&ED contracts</strong>
+	  <p>Even if these expenditures do not qualify for SR&ED expenditures for ITC purposes, the performer may transfer all or part of their qualified SR&ED expenditures to you.</p>
+	  <p>To transfer expenditures, both the claimant and the performer must use:</p>	  
 	  <ul class="fa-ul">
     <li><span class="far fa-file-pdf fa-lg text-muted fa-li"></span>  <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t1146.html">Form  T1146, Agreement to Transfer Qualified Expenditures Incurred in Respect of  SR&amp;ED Contracts Between Persons Not Dealing at Arm's Length</a>)</li>
   </ul>
