--- a/payroll/calculate/when/cpp2rates.html
+++ b/payroll/calculate/when/cpp2rates.html
@@ -139,14 +139,14 @@
 
 <tr>
 	<td >2025 </td>
-	<td>$81,100 (projected) </td>
+	<td>$81,100 <span class="label label-info">estimated figure</span> </td>
 	<td >4% </td>
 	<td >TBD</td>
 	<td >TBD </td>
 </tr>
 <tr>
 	<td >2024 </td>
-	<td >$73,200 (projected)</td>
+	<td >$73,200 <span class="label label-info">estimated figure</span></td>
 	<td >4% </td>
 	<td >TBD</td>
 	<td >TBD </td>
