--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -1318,8 +1318,8 @@
                   <h2 class="modal-title">CPP2 contribution rates and maximums</h2>
                </header>
                <div class="modal-body">
-	<p class="lead hidden" id="max"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Maximum annual employee and employer contribution" (<strong>column&nbsp;4)</strong> that matches the "Year" (<strong>column&nbsp;1)</strong> </p>
-	<p class="lead hidden" id="max1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Maximum annual pensionable earnings" (<strong>column&nbsp;2)</strong> that matches the "Year" (<strong>column&nbsp;1)</strong> </p>
+	<p class="lead hidden" id="max"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Additional maximum annual employee and employer contribution" (<strong>column&nbsp;4)</strong> that matches the "Year" (<strong>column&nbsp;1)</strong> </p>
+	<p class="lead hidden" id="max1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Additional maximum annual pensionable earnings" (<strong>column&nbsp;2)</strong> that matches the "Year" (<strong>column&nbsp;1)</strong> </p>
 <p class="lead hidden" id="rate"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Employee and employer contribution rate" (<strong>column&nbsp;3</strong>) that matches the "Year" (<strong>column&nbsp;1</strong>) </p>
 			
   <div data-ajax-replace="/cra-arc/payroll/calculate/when/cpp2rates.html #ajax-cpprate2"><a href="/cra-arc/payroll/calculate/when/cpp2rates.html">CPP2 contribution rates and maximums</a></div>
