--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-3.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-3.html
@@ -128,14 +128,14 @@
 
 <h2 id="h2">Adjusting your qualified expenditures</h2>
 		 <p>Your qualified SR&amp;ED expenditures are based on your total allowable SR&amp;ED expenditures that you adjust according to amounts you paid or received.</p>
-<h3>Add amounts that increase your expenditures</h3>
+<h3Amounts that increase your expenditures</h3>
 <p>Amounts that increase your qualified expenditures include: </p>
 <ul>
   <li>Payment of unpaid amounts from previous years </li>
 	<li>Prescribed  proxy amount (if you used the <a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/glossary.html#pmthd">proxy method</a>)</li>
   <li>Qualified  expenditures that were transferred to you (refer to section <a href="#nonarm">Transferring non-arm&rsquo;s length expenditures</a>)<!--use <span class="far fa-file-pdf fa-lg text-muted"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t1146.html">Form  T1146, Agreement to Transfer Qualified Expenditures Incurred in Respect of  SR&amp;ED Contracts Between Persons Not Dealing at Arm's Length</a>)--></li>
 </ul>
-<h3>Subtract amounts that reduce your expenditures</h3>
+<h3>Amounts that reduce your expenditures</h3>
 <p>All assistance and contract payments that you may receive for SR&amp;ED will reduce your qualified expenditures. These may include:</p>
 <ul>
 	<li>Provincial and territorial assistance (if not renounced in your province or territory)</li>
@@ -145,33 +145,19 @@
 		  </ul>
 	<!--sub-list ends-->
   <li>Other types of government or non-government assistance</li>
-  <li>Certain contract payments and third-party payments</li>
-  <li>Certain expenditures not allowed by regulations
-    <details>
-    <summary>What this may include</summary>
-    <p>Expenditures not allowed by regulations may  include:</p>
-    <ul>
-      <li>Interest and other financing costs</li>
-      <li>Dues or fees for membership in a scientific or technical society or organization</li>
-      <li>Legal or accounting fees</li>
-      <li>Conference or convention expenses</li>
-    </ul>
-    </details>    
-  </li>
-  <li>Non-arm&rsquo;s length transactions
-  <details>             
-<summary id="nonarm">Review non-arm&rsquo;s length expenditures</summary>
-	  <strong>Non-arm’s length amounts that may reduce your expenditures</strong>
-	  <ul>
-		  <li>adjustments to your purchases (limited to costs) of goods and services from non-arm's length suppliers</li>
+  <li>20% of contract payments and third-party payments</li>
+<li>Non-arm&rsquo;s length transactions</li>
+	<ul>
+		 <li>adjustments to your purchases (limited to costs) of goods and services from non-arm's length suppliers</li>
 		  <li>qualified expenditures you transferred</li>
 		  <li>assistance allocated to you</li>
-		  	<ul>
-				<li>in this case, complete <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t1145.html">Form T1145, Agreement to Allocate Assistance for SR&ED Between Persons Not Dealing at Arm’s Length</a></li>
+		<ul>
+		<li>in this case, complete: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t1145.html">Form T1145, Agreement to Allocate Assistance for SR&ED Between Persons Not Dealing at Arm’s Length</a></li>
 		  </ul>
-	  </ul>
-	  <strong>Expenditures for your non-arm’s length SR&ED contracts</strong>
-	  <p>Even if these expenditures do not qualify for SR&ED expenditures for ITC purposes, the performer may transfer all or part of their qualified SR&ED expenditures to you.</p>
+		<li>expenditures for your non-arm’s length SR&ED contracts</li>
+  <details>             
+<summary id="nonarm">Expenditures for your non-arm’s length SR&ED contracts</summary>
+	  	  <p>Even if these expenditures do not qualify for SR&ED expenditures for ITC purposes, the performer may transfer all or part of their qualified SR&ED expenditures to you.</p>
 	  <p>To transfer expenditures, both the claimant and the performer must use:</p>	  
 	  <ul class="fa-ul">
     <li><span class="far fa-file-pdf fa-lg text-muted fa-li"></span>  <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t1146.html">Form  T1146, Agreement to Transfer Qualified Expenditures Incurred in Respect of  SR&amp;ED Contracts Between Persons Not Dealing at Arm's Length</a>)</li>
