--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -233,13 +233,13 @@
                                     <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                    </span>  <span class="mrgn-tp-0 text-muted h5">Employee's <a href="#cpp-contrib" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#max1", "class": "hidden"}, {"action": "addClass", "source": "#max, #cpprate", "class": "hidden"}, {"action": "removeClass", "source": "#ajax-cpprate-tbl>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#ajax-cpprate-tbl>tbody>tr>td:nth-child(1), #ajax-cpprate-tbl>tbody>tr>td:nth-child(2)", "class": "info"}]'>maximum pensionable earnings&nbsp;<span class="far fa-question-circle"></span></a> 
+                                    </span>  <span class="mrgn-tp-0 text-muted h5">Employee's <a href="#cpp-contrib" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#max3", "class": "hidden"}, {"action": "addClass", "source": "#max2, #rate2", "class": "hidden"}, {"action": "removeClass", "source": "#ajax-cpprate-tbl>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#ajax-cpprate-tbl>tbody>tr>td:nth-child(1), #ajax-cpprate-tbl>tbody>tr>td:nth-child(2)", "class": "info"}]'>maximum pensionable earnings&nbsp;<span class="far fa-question-circle"></span></a> 
  <details><summary>How to calculate prorated maximum pensionable earnings</summary>  
     <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
                             <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                    </span><span class="mrgn-tp-0 text-muted h5"><a href="#cpp-contrib" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#max1", "class": "hidden"}, {"action": "addClass", "source": "#max, #cpprate", "class": "hidden"}, {"action": "removeClass", "source": "#ajax-cpprate-tbl>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#ajax-cpprate-tbl>tbody>tr>td:nth-child(1), #ajax-cpprate-tbl>tbody>tr>td:nth-child(2)", "class": "info"}]'>Maximum annual pensionable earnings&nbsp;<span class="far fa-question-circle"></span></a></span> 
+                                    </span><span class="mrgn-tp-0 text-muted h5"><a href="#cpp-contrib" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#max3", "class": "hidden"}, {"action": "addClass", "source": "#max2, #rate2", "class": "hidden"}, {"action": "removeClass", "source": "#ajax-cpprate-tbl>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#ajax-cpprate-tbl>tbody>tr>td:nth-child(1), #ajax-cpprate-tbl>tbody>tr>td:nth-child(2)", "class": "info"}]'>Maximum annual pensionable earnings&nbsp;<span class="far fa-question-circle"></span></a></span> 
                                  </li>
  <li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
@@ -352,7 +352,7 @@
                                  <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                    </span><span class="mrgn-tp-0 text-muted h5"> <a href="#cpp2-contrib" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#max", "class": "hidden"}, {"action": "addClass", "source": "#max1, #cpprate", "class": "hidden"}, {"action": "removeClass", "source": "#ajax-cpprate2-tbl>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#ajax-cpprate2-tbl>tbody>tr>td:nth-child(1), #ajax-cpprate2-tbl>tbody>tr>td:nth-child(4)", "class": "info"}]'>Maximum annual employee CPP2 contributions&nbsp;<span class="far fa-question-circle"></span></a> in their <strong>employment with you</strong></span> 
+                                    </span><span class="mrgn-tp-0 text-muted h5"> <a href="#cpp2-contrib" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#max", "class": "hidden"}, {"action": "addClass", "source": "#max1, #rate", "class": "hidden"}, {"action": "removeClass", "source": "#ajax-cpprate2-tbl>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#ajax-cpprate2-tbl>tbody>tr>td:nth-child(1), #ajax-cpprate2-tbl>tbody>tr>td:nth-child(4)", "class": "info"}]'>Maximum annual employee CPP2 contributions&nbsp;<span class="far fa-question-circle"></span></a> in their <strong>employment with you</strong></span> 
                                  </li>
                                  <li class="brdr-bttm">
                                     <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
@@ -1332,9 +1332,9 @@
                   <h2 class="modal-title">CPP contribution rates, maximums and exemptions</h2>
                </header>
                <div class="modal-body">
-	<p class="lead hidden" id="max"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Maximum annual employee and employer contribution" (<strong>column&nbsp;6)</strong> that matches the "Year" (<strong>column&nbsp;1)</strong> </p>
-	<p class="lead hidden" id="max1"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Maximum annual pensionable earnings" (<strong>column&nbsp;2)</strong> that matches the "Year" (<strong>column&nbsp;1)</strong> </p>
-				   <p class="lead hidden" id="cpprate"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Employee and employer contribution rate" (<strong>column&nbsp;5</strong>) that matches the "Year" (<strong>column&nbsp;1</strong>) </p>
+	<p class="lead hidden" id="max2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Maximum annual employee and employer contribution" (<strong>column&nbsp;6)</strong> that matches the "Year" (<strong>column&nbsp;1)</strong> </p>
+	<p class="lead hidden" id="max3"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Maximum annual pensionable earnings" (<strong>column&nbsp;2)</strong> that matches the "Year" (<strong>column&nbsp;1)</strong> </p>
+	 <p class="lead hidden" id="rate2"><span class="fas fa-bullhorn fa-xl text-muted"></span> <strong>Reminder:</strong> Use the "Employee and employer contribution rate" (<strong>column&nbsp;5</strong>) that matches the "Year" (<strong>column&nbsp;1</strong>) </p>
 				   
                   <div data-ajax-replace="/cra-arc/payroll/calculate/when/cpprates.html #ajax-cpprate"><a href="/cra-arc/payroll/calculate/when/cpprates.html">CPP contribution rates, maximums and exemptions</a></div>
                </div>
