--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -782,13 +782,14 @@
                                  </span><span class="mrgn-tp-0 text-muted h5"> Total CPP2 pensionable income for the pay period (step 3)</span> 
                               </li>
                            
-                              <li class="brdr-bttm">
+                            <li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-percent fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> 4% (<a href="#cpp2-contrib" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#cpprate", "class": "hidden"}, {"action": "addClass", "source": "#max, #max1", "class": "hidden"}, {"action": "removeClass", "source": "#ajax-cpprate-tbl>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#ajax-cpprate-tbl>tbody>tr>td:nth-child(1), #ajax-cpprate-tbl>tbody>tr>td:nth-child(5)", "class": "info"}]'>CPP2 rate&nbsp;<span class="far fa-question-circle"></span></a>)</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> 4% (<a href="#cpp2-contrib" aria-controls="mid-screen" class="overlay-lnk" role="button" data-wb-doaction='[{"action": "removeClass", "source": "#rate2", "class": "hidden"}, {"action": "addClass", "source": "#max2, #max3", "class": "hidden"}, {"action": "removeClass", "source": "#ajax-cpprate2-tbl>tbody>tr>td", "class": "info"}, {"action": "addClass", "source": "#ajax-cpprate2-tbl>tbody>tr>td:nth-child(1), #ajax-cpprate2-tbl>tbody>tr>td:nth-child(3)", "class": "info"}]'>CPP2 rate&nbsp;<span class="far fa-question-circle"></span></a>)</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
+				   
                               <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
