--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-3.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-3.html
@@ -156,7 +156,7 @@
 		  </ul>
 		<li>expenditures for your non-arm’s length SR&ED contracts</li>
   <details>             
-<summary id="nonarm">Transferring non-arm's lentgh expenditures</summary>
+<summary id="nonarm">Transferring non-arm's length expenditures</summary>
 	  	  <p>Even if these expenditures do not qualify for SR&ED expenditures for ITC purposes, the performer may transfer all or part of their qualified SR&ED expenditures to you.</p>
 	  <p>To transfer expenditures, both the claimant and the performer must use:</p>	  
 	  <ul class="fa-ul">
