--- a/subway/mghrtc/expensesmaire.html
+++ b/subway/mghrtc/expensesmaire.html
@@ -192,7 +192,7 @@ For this rule to apply the outlay or expense must be a qualifying expenditure of
 <p>In April 2023, she renovated her house to create a self-contained basement apartment so her brother could move in with her. This renovation was completed in October 2023. Her qualifying expenses for this renovation were <strong>$15,000</strong>.</p>
 
 <p>In July 2023, Des decided to build a second separate apartment over the garage for her elderly parents to move into. This renovation was completed in December 2023. Her qualifying expenses for this renovation were <strong>$63,000</strong>.</p>
-<p>As long as both renovations meet the eligibility criteria, Des may claim the expenses for <strong>both</strong> qualifying renovations on her 2023 tax return. The claims must be calculated separately to determine the maximum amount for each:</p>
+<p>As long as both renovations meet the eligibility criteria, Des may claim the expenses for <strong>both</strong> qualifying renovations on her 2023 tax return. Although Des spent $78,000 on the renovations to create 2 secondary units, she is limited to the maximum per qualifying renovation and cannot combine her total qualifying expenditures. The claims must be calculated separately to determine the maximum amount for each:</p>
 		   <p><strong>Renovation 1</strong></p>
 		   <ul class="fa-ul lst-spcd mrgn-bttm-lg mrgn-lft-lg">
 <li><span class="fa-stack text-success"><span class="far fa-circle fa-stack-2x"></span><em class="fas fa-dollar-sign fa-stack-1x"></em></span><span class="mrgn-tp-0 text-muted h5">$15,000 in qualifying expenses</span></li>
