--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-3.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-3.html
@@ -152,7 +152,7 @@
 		  <li>qualified expenditures you transferred</li>
 		  <li>assistance allocated to you</li>
 		<ul>
-		<li>in this case, complete: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t1145.html">Form T1145, Agreement to Allocate Assistance for SR&ED Between Persons Not Dealing at Arm’s Length</a></li>
+		<li>in this case, complete <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t1145.html">Form T1145, Agreement to Allocate Assistance for SR&ED Between Persons Not Dealing at Arm’s Length</a></li>
 		  </ul>
 		<li>expenditures for your non-arm’s length SR&ED contracts</li>
   <details>             
