--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -1117,7 +1117,7 @@
 </details>          
        
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm mrgn-tp-lg">
-<li class="cnjnctn-col">   If the amount in step 1 is <strong>more than</strong> your result, use the amount from <strong>step 2 as the CPP2 pensionable earnings for the period of employment</strong>.  </li>
+<li class="cnjnctn-col">   If the amount in step 1 is <strong>more than</strong> your result, use <strong>this result as the CPP2 pensionable earnings for the period of employment</strong>.  </li>
  <li class="cnjnctn-col">  If the amount in step 1 is <strong>less than</strong> your result, use the amount from <strong>step 1 as the CPP2 pensionable earnings for the period of employment</strong>.  </li>
 
 </ul>
