--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-3.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-3.html
@@ -148,13 +148,13 @@
   <li>20% of contract payments and third-party payments</li>
 <li>Non-arm&rsquo;s length transactions</li>
 	<ul>
-		 <li>adjustments to your purchases (limited to costs) of goods and services from non-arm's length suppliers</li>
-		  <li>qualified expenditures you transferred</li>
-		  <li>assistance allocated to you</li>
+		 <li>Adjustments to your purchases (limited to costs) of goods and services from non-arm's length suppliers</li>
+		  <li>Qualified expenditures you transferred</li>
+		  <li>Assistance allocated to you</li>
 		<ul>
-		<li>in this case, complete <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t1145.html">Form T1145, Agreement to Allocate Assistance for SR&ED Between Persons Not Dealing at Arm’s Length</a></li>
+		<li>In this case, complete <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t1145.html">Form T1145, Agreement to Allocate Assistance for SR&ED Between Persons Not Dealing at Arm’s Length</a></li>
 		  </ul>
-		<li>expenditures for your non-arm’s length SR&ED contracts</li>
+		<li>Expenditures for your non-arm’s length SR&ED contracts</li>
   <details>             
 <summary id="nonarm">Transferring non-arm's length expenditures</summary>
 	  	  <p>Even if these expenditures do not qualify for SR&ED expenditures for ITC purposes, the performer may transfer all or part of their qualified SR&ED expenditures to you.</p>
