--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -568,13 +568,16 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
   <p id="cd102">Learn more: Lump-sum payments&nbsp;– non-resident in code box 018&nbsp;– Lump-sum payments</p> 
  </details> 
 
- <details >  <summary>Code 104 – Research grants</summary> 
-  <p id="cd104">Report the total amount of research grants you paid to the recipient.</p> 
- </details> 
+ <details >  <summary>Code 104 – Research grants <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd104">Report research grants you paid to a recipient.</p> 
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance - Research grants</a></p> 
+</details> 
 
- <details>  <summary>Code 105 – Scholarships, fellowships, bursaries, and artists' project grants</summary> 
-  <p id="cd105">An amount reported here for Postdoctoral Fellowship income must also be reported using code 210 – Postdoctoral Fellowship income. </p>
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained-4.html">Post-doctoral fellows</a></p>
+ <details>  <summary>Code 105 – Scholarships, fellowships, bursaries, and artists' project grants  <span class="label label-warning">Jeremiah</span></summary> 
+  <p id="cd105">Report scholarships, fellowships, bursaries, and artists' project grants you paid to a recipient.</p> 
+<h4>Postdoctoral fellowship income</h4>
+<p>Report an amount if you paid postdoctoral fellowship income using code 105 and <a href="#cd210">code 210</a>. </p>
+<p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance</a></p> 
  </details> 
 
  <details>  <summary>Code 106 – Death benefits</summary> 
@@ -786,9 +789,11 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 <p>Learn more: <a href="/en/services/benefits/publicpensions/cpp/old-age-security/one-time-payment-older-seniors.html"> One-time payment for older seniors</a></p>
    </details> 
 
- <details>  <summary>Code 210 – Postdoctoral Fellowship Income</summary> 
-  <p id="cd210">Report the amount of postdoctoral fellowship income.</p>
-  <p>For 2021 and later tax years, new income code 210 has been introduced to report Postdoctoral Fellowship income. An amount reported here must also be included using code 105 – Scholarships, fellowships, bursaries, and artists' project grants.</p></details>
+ <details>  <summary>Code 210 – Postdoctoral Fellowship Income <span class="label label-warning">Jeremiah</span></summary> 
+ <p id="cd210">Report an amount if you paid postdoctoral fellowship income using code 210 and <a href="#cd105">code 105</a>. </p>
+ <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance</a></p> 
+</details>
+
 </section>
 
 	  <section id="account" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a payroll account</h2>
