--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -552,10 +552,21 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
   <p>If the subscriber and the subscriber's spouse or common-law partner are deceased and you pay the <abbr title="registered education savings plan">RESP</abbr> accumulated income payments to someone else, in the "Other information" area enter code <strong>122</strong> and the amount of the payment.</p> 
   
     <p>The regular tax on lump-sum payments <strong>and</strong> an additional tax of 20% (12% for Quebec) may apply to accumulated income payments.</p> 
-   
+    <h4>When to issue</h4>
+<dl class="dl-horizontal">
+<dt>RESP payments</dt>
+<dd><div data-ajax-replace="#ajax-ex1"></div></dd>
+</dl>
+
  </details> 
 <details >  <summary>Code 042 – RESP educational assistance payments</summary> 
   <p id="cd042">If you are the promoter of an RESP, and you paid <abbr title="registered education savings plan">RESP</abbr> educational assistance payments (amounts other than a refund of contributions) to or for an individual to help further their education at a post-secondary school level, report this amount in the "Other information" area using code <strong>042</strong> on the T4A slip. </p>
+  <h4>When to issue</h4>
+<dl class="dl-horizontal">
+<dt>RESP payments</dt>
+<dd><div data-ajax-replace="#ajax-ex1"></div></dd>
+</dl>
+
 <p>Learn more <a href="https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-education-savings-plans-resps/payments-resp/educational-assistance-payments-eaps.html">Educational Assistance Payments (EAPs)</a></p> 
  </details> 
 
@@ -636,6 +647,11 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  
 <details>  <summary>Code 122 – RESP accumulated income payments paid to other</summary> 
   <p id="cd122">Learn more: Code 040&nbsp;–&nbsp;RESP accumulated income payments</p> 
+  <h4>When to issue</h4>
+<dl class="dl-horizontal">
+<dt>RESP payments</dt>
+<dd><div data-ajax-replace="#ajax-ex1"></div></dd>
+</dl>
  </details> 
 
  <details>  <summary>Code 123 – Payments from a revoked DPSP</summary> 
@@ -691,7 +707,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
 <p>Report the variable payment life annuity amount paid from a <abbr title="pool registered pension plan">PRPP</abbr> and money purchase RPP.</p>
  </details> 
  
-<details>  <summary>Code 134 – Tax-free savings account (TFSA) taxable amount <span class="label label-warning">Jeremiah</span></summary> 
+<details>  <summary>Code 134 – Tax-free savings account (TFSA) taxable amount <span class="label label-warning">Jeremiah - Not mentioned on the webpage?</span></summary> 
   <p  id="cd134">Report the taxable amount paid during the exempt period to a beneficiary who is a resident of Canada.</p>
  <h4>When to issue</h4>
 <dl class="dl-horizontal">
