--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -587,7 +587,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  <details>  <summary>Code 105 – Scholarships, fellowships, bursaries, and artists' project grants  <span class="label label-warning">Jeremiah</span></summary> 
   <p id="cd105">Report scholarships, fellowships, bursaries, and artists' project grants you paid to a recipient.</p> 
 <h4>Postdoctoral fellowship income</h4>
-<p>Report an amount if you paid postdoctoral fellowship income using code 105 and <a href="#cd210">code 210</a>. </p>
+<p>Report postdoctoral fellowship income you paid using code 105 and <a href="#cd210">code 210</a>. </p>
 <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance</a></p> 
  </details> 
 
@@ -806,7 +806,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
    </details> 
 
  <details>  <summary>Code 210 – Postdoctoral Fellowship Income <span class="label label-warning">Jeremiah</span></summary> 
- <p id="cd210">Report an amount if you paid postdoctoral fellowship income using code 210 and <a href="#cd105">code 105</a>. </p>
+ <p id="cd210">Report postdoctoral fellowship income you paid using code 210 and <a href="#cd105">code 105</a>. </p>
  <p>Learn more on taxable benefits: <a href="/cra-arc/payroll/calculate/benefit/education.html">Educational assistance</a></p> 
 </details>
 
