--- a/business-accounts/access-corp-info.html
+++ b/business-accounts/access-corp-info.html
@@ -65,7 +65,7 @@
 
 		
 		</div>
-		<p> Intro para asdf asdf asdf </p>
+		<p> Intro para here I put all the stuff.  </p>
 
 	<h2>On this page</h2> 
 		<ul>
@@ -99,11 +99,14 @@
 <p>
 The following individuals can request tax information:
 
-•	director(s) of a corporation
-•	 delegated authority (level 3)
-•	third-party representatives authorized by a director or a delegated authority
-•	legal representatives for the corporation (eg. bankruptcy trustee, court-appointed custodian)
+<ul>
+<li>director(s) of a corporation</li>
+<li>D0ated authority (level 3</li>
+<li>third-party representatives authorized by a director or a delegated authority</li>
+<li>legal representatives for the corporation (eg. bankruptcy trustee, court-appointed custodian)</li>
 
+</ul>
+•	
 To avoid any delays or issues,  we must have up-to-date information on directors.
 
 
