--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -127,8 +127,8 @@
 
 
 
-            <p>How to use the CPP2 contributions tables and how to calculate manually the amount to withhold.</p>
-          <p><strong>If the employee's province of employment is in Quebec</strong>, you are required to deduct the second Quebec Pension Plan (QPP) contributions and not the CPP2 contributions, refer to: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-pension-plan-contributions/">Québec Pension Plan Contributions | Revenu Québec</a></p>
+            <p>How to use the CPP2 contributions tables and how to manually calculate the amount to withhold.</p>
+          <p><strong>If the employee's province of employment is Quebec</strong>, you are required to deduct the second Quebec Pension Plan (QPP) contributions and not the CPP2 contributions, refer to: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-pension-plan-contributions/">Québec Pension Plan Contributions | Revenu Québec</a></p>
 			
 			
             <h2 class="h3">On this page</h2>
