--- a/payroll/calculate/how/cpp.html
+++ b/payroll/calculate/how/cpp.html
@@ -122,8 +122,8 @@
             </div>
 
 
-            <p>How to use the CPP contributions tables and how to calculate manually the amount to withhold.</p>
-          <p><strong>If the employee's province of employment is in Quebec</strong>, you are required to deduct the Quebec Pension Plan (QPP) contributions and not the CPP contributions, refer to: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-pension-plan-contributions/">Québec Pension Plan Contributions | Revenu Québec</a></p>
+            <p>How to use the CPP contributions tables and how to manually calculate the amount to withhold.</p>
+          <p><strong>If the employee's province of employment is Quebec</strong>, you are required to deduct the Quebec Pension Plan (QPP) contributions and not the CPP contributions, refer to: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-pension-plan-contributions/">Québec Pension Plan Contributions | Revenu Québec</a></p>
 			
 			
             <h2 class="h3">On this page</h2>
@@ -164,7 +164,10 @@
                                        <h3 class="mrgn-tp-sm text-muted h4">Use when</h3>
                                        <ul class="fa-ul">
                                           <li><span class="fas fa-check text-success fa-li fa-lg"></span> The payment is for regular employment income or was made with regular pay for one of the common or uncommon pay periods for which tables are provided</li>
-                                          <li><span class="fas fa-check text-success fa-li fa-lg"></span> You received Form TD1-IN (in addition to the TD1) from your employee: <strong>only use these tables on the portion of their income which is taxable</strong></li>
+                                          <li><span class="fas fa-check text-success fa-li fa-lg"></span> You received Form TD1-IN (in addition to the TD1) from your employee: <strong>only use these tables on the portion of their income which is taxable</strong>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a> </p>
+
+</li>
                                        </ul>
                                     </div>
                                     <div class="col-md-7">
