--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -168,7 +168,9 @@
                                        <h3 class="mrgn-tp-sm text-muted h4">Use when</h3>
                                        <ul class="fa-ul">
                                           <li><span class="fas fa-check text-success fa-li fa-lg"></span> The payment is for remuneration paid in one of the common or uncommon pay periods for which tables are provided</li>
-                                          <li><span class="fas fa-check text-success fa-li fa-lg"></span> You received Form TD1-IN (in addition to the TD1) from your employee: <strong>only use these tables on the portion of their income which is taxable</strong></li>
+                                          <li><span class="fas fa-check text-success fa-li fa-lg"></span> You received Form TD1-IN (in addition to the TD1) from your employee: <strong>only use these tables on the portion of their income which is taxable</strong>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a> </p>
+</li>
                                        </ul>
                                     </div>
                                     <div class="col-md-7">
