--- a/payroll/calculate/how/gsthst.html
+++ b/payroll/calculate/how/gsthst.html
@@ -119,7 +119,7 @@
                   <div class="clearfix">&nbsp;</div>
                </div>
             </div>
-            <p>How to calculate manually the amount of GST/HST to remit on employee benefits.</p>
+            <p>How to manually calculate the amount of GST/HST to remit on employee benefits.</p>
             <h2 class="h3">On this page</h2>
             <ul>
              <li><a href="#h_2">Steps</a></li>
