--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -444,7 +444,7 @@
                               <li><span class="fas  fa-li"><span class="fas fa-equals"></span><span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                  <span class="fas fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x fa-inverse"></span>
-                                 </span> <span class="mrgn-tp-0 text-muted h5">This amount is the prorated CPP2 contribution after prorating in their employment with you
+                                 </span> <span class="mrgn-tp-0 text-muted h5">This amount is the maximum CPP2 contribution after prorating in their employment with you
                                  </span></span> 
                               </li>
          <li class="brdr-bttm">
