--- a/payroll/calculate/how/cpp2.html
+++ b/payroll/calculate/how/cpp2.html
@@ -910,14 +910,14 @@
                             <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                    </span><span class="mrgn-tp-0 text-muted h5"> Employee’s gross pay for the total period which will be included in box 14 of their T4 slip </span> 
+                                    </span><span class="mrgn-tp-0 text-muted h5"> Employee’s gross pay for the total period of employment which will be included in box 14 of their T4 slip </span> 
                                  </li>
 		  
 			      <li >
                                     <span class="fas  fa-li"><span class="fas fa-plus"></span> <span class="wb-inv">plus</span></span> <span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                    </span>  <span class="mrgn-tp-0 text-muted h5"> Employee’s taxable benefits and allowances for the total period which will be included in box 14 of their T4 slip</span>
+                                    </span>  <span class="mrgn-tp-0 text-muted h5"> Employee’s taxable benefits and allowances for the total period of employment which will be included in box 14 of their T4 slip</span>
                                     <div class="mrgn-tp-md"></div>
                                  </li>
 
@@ -1000,7 +1000,7 @@
                               <li><span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span><span class="mrgn-tp-0 text-muted h5"> $85,000 is Joseph’s total salary, wages benefits, and allowances for the total period which will be included in box 14 of their T4 slip</span> 
+                                 </span><span class="mrgn-tp-0 text-muted h5"> $85,000 is Joseph’s total salary, wages benefits, and allowances for the total period of employment which will be included in box 14 of their T4 slip</span> 
                               </li>
 
                               <li class="brdr-bttm">
@@ -1030,7 +1030,7 @@
                                     <span class="fas  fa-li"><span class="fas fa-minus"></span> <span class="wb-inv">minus</span></span> <span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                    </span>  <span class="mrgn-tp-0 text-muted h5"> $67,700  <span class="label label-info">estimated figure</span> is Joseph’s maximum annual pensionable earnings</span>
+                                    </span>  <span class="mrgn-tp-0 text-muted h5"> $67,700  <span class="label label-info">estimated figure</span> is Joseph’s maximum annual pensionable earnings for the period of employment</span>
                                     <div class="mrgn-tp-md"></div>
                                  </li>
                                  <li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
