--- a/payroll/calculate/when/learncpp.html
+++ b/payroll/calculate/when/learncpp.html
@@ -250,8 +250,8 @@
 </ul>     
 <h2 id="h_10">What is the CPP enhancement</h2>
 <p>Before January 1, 2019, employees contributed 4.95% on their annual maximum pensionable earnings to the CPP, with employers making an equal contribution. These are the <strong>base contributions </strong>to the CPP. </p>
-<p>From 2019 to 2023, the contribution rate for employees is being increased gradually from 4.95% to 5.95%. This is the <strong>first additional contribution </strong>to the CPP. </p>
-<p>Beginning in 2024, a second higher limit (the year's additional maximum pensionable earnings) will be introduced. A <strong>second additional contribution </strong>will be made on these earnings, beginning at the first earnings ceiling and going up to the second earnings ceiling. </p>
+<p>From 2019 to 2023, the contribution rate for employees is increased gradually from 4.95% to 5.95%. This is the <strong>first additional contribution </strong>to the CPP. </p>
+<p>Beginning in 2024, a second higher ceiling (the year's additional maximum pensionable earnings) is introduced. A <strong>second additional CPP (CPP2) contribution </strong>is made on these earnings, beginning at the first earnings ceiling and going up to the second earnings ceiling. </p>
 
 
        <h2 id="h_11"> References</h2>
