--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-3.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-3.html
@@ -127,7 +127,7 @@
 <p>To claim an SR&amp;ED investment tax credit (ITC), you will need to determine the SR&amp;ED expenditures that qualify for an ITC.</p>
 
 <h2 id="h2">Adjusting your qualified expenditures</h2>
-		 <p>Your qualified SR&amp;ED expenditures are based on your total allowable SR&amp;ED expenditures that you adjust according to amounts you paid or received.</p>
+		 <p>Your qualified SR&amp;ED expenditures start with your total allowable SR&amp;ED expenditures that you adjust according to amounts you paid or received.</p>
 <h3Amounts that increase your expenditures</h3>
 <p>Amounts that increase your qualified expenditures include: </p>
 <ul>
