--- a/sred/scientific-research-experimental-development-tax-incentive-program/calculate-4.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/calculate-4.html
@@ -205,14 +205,14 @@
     <th><strong>Refund rate</strong></th>
   </tr>
   <tr>
-    <td><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/investment-tax-credit-policy.html#s4_2">CCPC that are qualifying    corporations</a> other than excluded corporations </td>
+    <td>CCPCs that are<a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/investment-tax-credit-policy.html#s4_2">qualifying    corporations</a> other than excluded corporations </td>
     <td>35% </td>
     <td>100% </td>
     <td>15% </td>
     <td>40% </td>
   </tr>
   <tr>
-    <td><a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/investment-tax-credit-policy.html#s4_3">CCPC that are excluded    corporations</a></td>
+    <td>CCPCs that are<a href="https://www.canada.ca/en/revenue-agency/services/scientific-research-experimental-development-tax-incentive-program/investment-tax-credit-policy.html#s4_3">excluded    corporations</a></td>
     <td>35% </td>
     <td>40% </td>
     <td>15% </td>
