--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -772,7 +772,7 @@ If you paid a single amount out of an RPP or a DPSP to an individual or you tran
  </li>
 <li class="code-num">
 <details>  <summary>Code 134 – Tax-free savings account (TFSA) taxable amount <span class="label label-warning">Jeremiah - Not mentioned on the webpage?</span></summary> 
-  <p  id="cd134">Report the taxable amount paid during the exempt period to a beneficiary who is a resident of Canada.</p>
+  <p  id="cd134">Report the amount of the taxable benefit you paid during the exempt period to a beneficiary who is a resident of Canada.</p>
  <h4>When to issue</h4>
 <dl class="dl-horizontal">
 <dt>Tax-free savings account (TFSA)</dt>
